--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "BoseV",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "gulp": "^4.0.2",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@material/web": "^1.1.1"
   }
 }
